Bug 166347 - "Recent Documents" and "Templates" in the Start Center toggle regardless of the selection
Summary: "Recent Documents" and "Templates" in the Start Center toggle regardless of t...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.5.9.2 release
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2025-04-25 22:45 UTC by nobu
Modified: 2025-05-02 10:32 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-04-25 22:45:49 UTC
Description:
"Recent Documents" and "Templates" in the Start Center toggle regardless of the selection.

Steps to Reproduce:
1. Open Start Center.
2. Push "Recent Documents" Button.
3. Push "Recent Documents" Button again.

Actual Results:
4. A thumbnail of "Templates" appears.

Expected Results:
4. A thumbnail of "Recent Documents" is displayed.


Reproducible: Always


User Profile Reset: No

Additional Info:

Reproducible with

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a6e59a058306f0523f3686a9b084d010bd80e632
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 1 nobu 2025-04-25 22:50:29 UTC
I made a mistake.
[3.] not required.
Comment 2 mikhail.machine 2025-04-28 07:05:09 UTC
Hello nobu,

Thank you for reporting the bug. I can confirm that the bug is present in master.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a8ec21adf255b70bb6eeb0a1717190df303d8b26
CPU threads: 12; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_FI); UI: en-US
Calc: threaded
Comment 3 Buovjaga 2025-04-28 08:24:23 UTC
Is this a regression?
Comment 4 nobu 2025-04-28 08:44:23 UTC
(In reply to Buovjaga from comment #3)
> Is this a regression?

It was originally a button with a pull-down, but the pull-down was removed due to the addition of a filter function at the top.
It might not be possible to judge whether it was a defect or not because it was due to a function change, but I was confused.
Comment 5 nobu 2025-04-28 08:47:42 UTC
Not Reproduced with
Version: 7.4.7.2 (x64) / LibreOffice Community
Build ID: 723314e595e8007d3cf785c16538505a1c878ca5
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL

Reproducible with
Version: 7.5.9.2 (X86_64) / LibreOffice Community
Build ID: cdeefe45c17511d326101eed8008ac4092f278a9
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded
Comment 6 BogdanB 2025-04-28 13:11:23 UTC
The same if we press Templates twice, is commuting from Recent Documents to Templates, and again.
Comment 7 Saburo 2025-05-01 07:47:25 UTC
Pressing "Recent Documents" twice leaves no change, but "Templates" switches to "Recent Documents."
author	Caolán McNamara
commit ce8256032edef03320f9d6ba6deba85977209e8f

toggle the other togglebutton to the inverse state of this togglebutton
Change-Id: I7e19fdb89b1503644a49d8beaef9ada3fe6beabe
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140085
***

Switch between "Recent Documents" and "Templates".(Current Behavior)
author	Caolán McNamara
commit 24f231563133ceca55cfca8f7b704db98cd2a923

toggle state regardless of which toggle was used
Change-Id: I43c295e2cc39497dba8812f1c9e296068d07a224
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140977
Comment 8 Buovjaga 2025-05-01 09:10:42 UTC
(In reply to Saburo from comment #7)
> Pressing "Recent Documents" twice leaves no change, but "Templates" switches
> to "Recent Documents."
> author	Caolán McNamara
> commit ce8256032edef03320f9d6ba6deba85977209e8f
> 
> toggle the other togglebutton to the inverse state of this togglebutton
> Change-Id: I7e19fdb89b1503644a49d8beaef9ada3fe6beabe
> Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140085
> ***
> 
> Switch between "Recent Documents" and "Templates".(Current Behavior)
> author	Caolán McNamara
> commit 24f231563133ceca55cfca8f7b704db98cd2a923
> 
> toggle state regardless of which toggle was used
> Change-Id: I43c295e2cc39497dba8812f1c9e296068d07a224
> Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140977

Alright, the change definitely sounds intentional and backingwindow.cxx is about Start Center. We can ping Caolán to get his comments.
Comment 9 Caolán McNamara 2025-05-01 13:58:33 UTC
I don't have super firm views on this, just that its internally consistent.

They way it is now is that, they are toggle buttons. If they are toggle buttons then the first click presses it in, and the second click pops it out. If a click pops it out, then the other button has to press in to be consistent.

They could be treated instead as radio buttons, in which case the second click has no effect and it stays pressed in. That might create a bit of a problem in that toggle buttons normally push out on a second click so might need a bit of tweaking over the default behaviour for those.
Comment 10 Buovjaga 2025-05-01 17:05:07 UTC
Ok, let's ping UX as well.
Comment 11 Heiko Tietze 2025-05-02 07:19:07 UTC
(In reply to Caolán McNamara from comment #9)
> They could be treated instead as radio buttons...
Patch incoming...
Comment 12 Commit Notification 2025-05-02 10:32:41 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/078337562dc8c6a92def7760c54960a06d6a81cf

Resolves tdf#166347 - Start center recent/template button toggle

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.