Resolves tdf#166347 - Start center recent/template button toggle

Change-Id: I897c282a8c4fba2731a625637eb7bbe77473bebd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184887
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>